src/objects/INT_Perjudicados__c.object
<CustomObject>
    <description>Contiene información de los perjudicados asociados a los movimientos que se envían a las aseguradoras</description>
    <fields>
        <fullName>IPE_EMA_Perjudicado_Email__c</fullName>
        <description>Correo electrónico del perjudicado</description>
        <label>Correo electrónico</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IPE_FOR_Nombre2__c</fullName>
        <description>Segundo Nombre del Perjudicado. Siempre va con espacios en blanco</description>
        <formula>&apos; &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segundo Nombre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_FOR_Tipo_Telefono__c</fullName>
        <description>Campo para tipo de teléfono que se envía en ficheros a CIAs.</description>
        <formula>&apos;01&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Teléfono</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_FOR_Tipo_Via__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Vía</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_LKP_Movimiento_CIA__c</fullName>
        <description>Movimiento que se envía a la aseguradora asociado a los perjudicados</description>
        <label>Integraciones: Movimiento CIA</label>
        <referenceTo>INT_Movimiento_CIA__c</referenceTo>
        <relationshipLabel>Integraciones: Perjudicados</relationshipLabel>
        <relationshipName>Integraciones_Perjudicados</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IPE_TFN_Telefono__c</fullName>
        <description>Teléfono del perjudicado</description>
        <label>Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Apellido_1__c</fullName>
        <description>Primer Apellido del Perjudicado</description>
        <label>Primer Apellido</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Apellido_2__c</fullName>
        <description>Segundo Apellido del Perjudicado</description>
        <label>Segundo Apellido</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Cbanc_Codigo_Entidad__c</fullName>
        <description>Código de la Entidad Bancaria del Perjudicado</description>
        <label>Cta. Bancaria: Código Entidad</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Cbanc_Digito_Control__c</fullName>
        <description>Dígito de Control de la Cuenta del Perjudicado</description>
        <label>Cta. Bancaria: Dígito de Control</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Cbanc_IBAN__c</fullName>
        <description>Código IBAN de la Cuenta del Perjudicado</description>
        <label>Cta. Bancaria: IBAN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Cbanc_Numero__c</fullName>
        <description>Número de Cuenta del Perjudicado</description>
        <label>Cta. bancaria: Nº de Cuenta</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Cbanc_Sucursal_Oficina__c</fullName>
        <description>Código de la Oficina de la Cuenta del Perjudicado</description>
        <label>Cta.Bancaria: Código Sucursal</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Codigo_Postal__c</fullName>
        <description>Código Postal del Perjudicado</description>
        <label>Código Postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Descripcion_Perjudicado__c</fullName>
        <description>Descripción del Perjudicado</description>
        <label>Descripción del Perjudicado</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Direccion__c</fullName>
        <description>Dirección del Perjudicado</description>
        <label>Dirección</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Nombre__c</fullName>
        <description>Nombre del Perjudicado</description>
        <label>Nombre</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Pais__c</fullName>
        <description>País del perjudicado</description>
        <label>País</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Perjudicado_N_Documento__c</fullName>
        <description>Número de documento del perjudicado</description>
        <label>Nº Documento</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Perjudicado_Tipo_Documento__c</fullName>
        <description>Tipo de documento perjudicado</description>
        <label>Tipo de Documento</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Poblacion__c</fullName>
        <description>Población del Perjudicado</description>
        <label>Población</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Provincia__c</fullName>
        <description>Provincia del perjudicado</description>
        <label>Provincia</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPE_TXT_Tipo_Perjudicado__c</fullName>
        <description>Tipo de perjudicado</description>
        <label>Tipo de perjudicado</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Integraciones: Perjudicados</label>
    <nameField>
        <label>Nombre de Integraciones: Perjudicados</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integraciones: Perjudicados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>